# caweb

./: .dockerignore  Dockerfile  DockerfileDistroless  README.md  create-ca.sh  main.py  multiarch-build.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  multiarch.yml
caweb-chart/: Chart.yaml  readme.md  values.yaml
caweb-chart/templates/: certificate.yaml  deployment.yaml  gateway.yaml  pvc.yaml  service.yaml  virtualservice.yaml
static/: style.css
templates/: base.html  ca_info.html  certs.html  form.html
tests/: test_main.py
